--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "server": "node server.js",
-    "start": "npm run server & npm run dev",
+    "start": "npm run server & npm run build",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
